@@ -1,3 +1,12 @@
+2013-04-16  Jesse  <>
+
+	* GameMatch.cs:
+	* GREATLib.csproj:
+	* GameWorld.cs:
+	* Player.cs:
+	* IChampion.cs:
+	* StickmanChampion.cs: 
+
 2013-04-15  Jesse  <>
 
 	* GREATLib.csproj:
